0027801: Configuration - fix compilation of Standard.cxx when using MinGW-W64